konst/tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.stderr
error: `any` expects to be passed a 1-parameter closure
 --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:5:5
  |
5 |     konst::iter::eval!(R, any());
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `any` expects to be passed a 1-parameter closure
 --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:6:5
  |
6 |     konst::iter::eval!(R, any(||false));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `any` expects valid closure syntax, passed closure without return value
 --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:7:5
  |
7 |     konst::iter::eval!(R, any(|_|));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__parse_closure_no_expr_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `any` expects no arguments after closure argument
 --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:8:5
  |
8 |     konst::iter::eval!(R, any(|_|(), 100));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__parse_closure_trailing_expr_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `any` expects to be passed a 1-parameter closure
 --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:9:5
  |
9 |     konst::iter::eval!(R, any(|a, b|false));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `all` expects to be passed a 1-parameter closure
  --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:13:5
   |
13 |     konst::iter::eval!(R, all());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `all` expects to be passed a 1-parameter closure
  --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:14:5
   |
14 |     konst::iter::eval!(R, all(||false));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `all` expects no arguments after closure argument
  --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:15:5
   |
15 |     konst::iter::eval!(R, all(|_|(), 100));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_trailing_expr_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `all` expects to be passed a 1-parameter closure
  --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:16:5
   |
16 |     konst::iter::eval!(R, all(|a, b|false));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `copied` does not take arguments, passed: 10
  --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:20:5
   |
20 |     konst::iter::eval!(S, copied(10));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__cim_error_on_args` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `count` does not take arguments, passed: 10
  --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:24:5
   |
24 |     konst::iter::eval!(R, count(10));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__cim_error_on_args` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `enumerate` does not take arguments, passed: 10
  --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:28:5
   |
28 |     konst::iter::eval!(R, enumerate(10));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__cim_error_on_args` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:8:34
  |
8 |     konst::iter::eval!(R, any(|_|(), 100));
  |                                  ^^ expected `bool`, found `()`

error[E0308]: mismatched types
  --> tests/misc_tests/iter_eval_ui_tests/a_to_e_method_syntax_err.rs:15:34
   |
15 |     konst::iter::eval!(R, all(|_|(), 100));
   |                                  ^^ expected `bool`, found `()`
